--- a/src/components/PortableTextCmps/PortableTextDocumentReference.astro
+++ b/src/components/PortableTextCmps/PortableTextDocumentReference.astro
@@ -47,6 +47,7 @@ const reference: RecordProps = node?.reference;
 		}
 		.record-title {
 			order: 2;
+			text-wrap: pretty;
 			text-wrap: balance;
 		}
 		.record-title-baseline {
