--- a/src/components/PortableTextCmps/PortableTextTitle.astro
+++ b/src/components/PortableTextCmps/PortableTextTitle.astro
@@ -21,6 +21,7 @@ const { node } = Astro.props;
 			display: flex;
 			flex-direction: column;
 			row-gap: var(--spacer-200);
+			text-wrap: pretty;
 			text-wrap: balance;
 		}
 		.record-title-baseline {
