--- a/src/components/NavigationMenu.astro
+++ b/src/components/NavigationMenu.astro
@@ -64,9 +64,7 @@ const {
 	@use "@styles/mixins";
 	:global(body) {
 		--header-height: calc(1em * 4);
-		// --header-offset: var(--spacer-400);
 		--header-offset: 0px;
-		--body-inline-spacing: calc(var(--spacer-400) + env(safe-area-inset-left, 0px));
 		@media (max-width: 640px) {
 			--header-offset: 0px;
 		}
@@ -220,7 +218,7 @@ const {
 				display: flex;
 				flex-direction: column;
 				height: 100%;
-				padding-block-end: var(--spacer-400);
+				padding-block-end: calc(var(--spacer-400) + env(safe-area-inset-bottom, 0px));
 				border-block-start: 1px solid var(--color-5);
 				overflow-y: auto;
 				@include mixins.no-scrollbar();
