--- a/src/components/RichText.astro
+++ b/src/components/RichText.astro
@@ -83,6 +83,7 @@ export function portableTextToPlainText(source: string | TypedObject[]) {
 		}
 		.heading {
 			font-size: var(--font-size-700);
+			// font-weight: 500;
 		}
 		blockquote {
 			font-family: var(--font-family-serif);
