--- a/src/components/Page.astro
+++ b/src/components/Page.astro
@@ -6,6 +6,7 @@ import type { PublicationProps } from "@publications/[slug].astro";
 import RecordTitle from "./RecordTitle.astro";
 import RecordImage from "./RecordImage.astro";
 import type { HomepageProps } from "@root/pages/index.astro";
+import TitleAndSubtitle from "./TitleAndSubtitle.astro";
 
 export type PageProps = {
 	body: PageBuilderProps[];
@@ -36,6 +37,9 @@ const relatedRecords = [...(hasRelatedProjects && source.relatedProjects || []),
 	{hasBody && (
 		<section class="page-body">
 			<h2 class="display-none">Body</h2>
+			<!-- <div class="page-banner" hidden="true">
+				<TitleAndSubtitle title={source.title} subtitle={(source.type === "project" || source.type === "publication") && source.subtitle} />
+			</div> -->
 			<PageBuilder source={hasBody && source.page.body} />
 		</section>
 	)}
