--- a/src/components/PortableTextCmps/PortableTextNote.astro
+++ b/src/components/PortableTextCmps/PortableTextNote.astro
@@ -1,6 +1,12 @@
 ---
+const { node } = Astro.props;
 ---
 
-<div class="note">
-	<slot />
-</div>
+{node && node.children && !(node.children.length === 1 && !node.children[0].text)
+	? (
+		<div class="note">
+			<slot />
+		</div>
+	)
+	: null
+}
